@@ -1,13 +1,13 @@
 package com.tech.orbi.controller;
 
 import com.tech.orbi.Repository.DeliveryRepository;
-import com.tech.orbi.Repository.DriverProfileRepository;
+import com.tech.orbi.Repository.DriverRepository;
 import com.tech.orbi.Repository.RouteRepository;
 import com.tech.orbi.dto.DeliveryDto;
 import com.tech.orbi.dto.LocationDto;
 import com.tech.orbi.dto.RouteResponseDto;
 import com.tech.orbi.entity.Delivery;
-import com.tech.orbi.entity.DriverProfile;
+import com.tech.orbi.entity.Driver;
 import com.tech.orbi.entity.Route;
 import com.tech.orbi.service.RouteService;
 import org.springframework.http.ResponseEntity;
@@ -28,13 +28,16 @@ public class RouteController {
     private final RouteService routeService;
     private final RouteRepository routeRepository;
     private final DeliveryRepository deliveryRepository;
-    private final DriverProfileRepository driverProfileRepository;
+    private final DriverRepository driverRepository;
 
-    public RouteController(RouteService routeService, RouteRepository routeRepository, DeliveryRepository deliveryRepository, DriverProfileRepository driverProfileRepository) {
+    public RouteController(RouteService routeService,
+                           RouteRepository routeRepository,
+                           DeliveryRepository deliveryRepository,
+                           DriverRepository driverRepository) {
         this.routeService = routeService;
         this.routeRepository = routeRepository;
         this.deliveryRepository = deliveryRepository;
-        this.driverProfileRepository = driverProfileRepository;
+        this.driverRepository = driverRepository;
     }
 
     @Transactional
@@ -47,25 +50,23 @@ public class RouteController {
             return ResponseEntity.badRequest().build();
         }
 
-        UUID driverIdFromRequest = locations.get(0).driverId();
+        UUID driverIdFromRequest = locations.getFirst().driverId();
+        Optional<Driver> driverProfileOptional = Optional.empty();
 
-        Optional<DriverProfile> driverProfileOptional = Optional.empty();
         if (driverIdFromRequest != null) {
-            driverProfileOptional = driverProfileRepository.findById(driverIdFromRequest);
+            driverProfileOptional = driverRepository.findById(driverIdFromRequest);
         }
 
         if (driverIdFromRequest != null && driverProfileOptional.isEmpty()) {
-            System.out.println("Driver Profile com ID: " + driverIdFromRequest + " não encontrado.");
             return ResponseEntity.notFound().build();
         }
 
-        DriverProfile driverProfile = driverProfileOptional.orElse(null);
-
+        Driver driver = driverProfileOptional.orElse(null);
         List<LocationDto> optimizedRoute = routeService.findBestRoute(locations, startIndex);
 
         Route newRoute = new Route();
-        if (driverProfile != null) {
-            newRoute.setDriverProfile(driverProfile);
+        if (driver != null) {
+            newRoute.setDriver(driver);
         }
 
         newRoute = routeRepository.save(newRoute);
@@ -73,19 +74,11 @@ public class RouteController {
         for (int i = 0; i < optimizedRoute.size(); i++) {
             LocationDto location = optimizedRoute.get(i);
             Delivery delivery = new Delivery();
-
             delivery.setRoute(newRoute);
             delivery.setOrder(i + 1);
-
-            delivery.setDropoffAddress(location.address());
-            delivery.setDropoffLatitude(BigDecimal.valueOf(location.latitude()));
-            delivery.setDropoffLongitude(BigDecimal.valueOf(location.longitude()));
-
-            delivery.setRecipientName(location.recipientName());
-            delivery.setRecipientPhone(location.recipientPhone());
-            delivery.setRecipientEmail(location.recipientEmail());
-            delivery.setPackageDetails(location.packageDetails());
-
+            delivery.setAddress(location.address());
+            delivery.setLatitude(BigDecimal.valueOf(location.latitude()));
+            delivery.setLongitude(BigDecimal.valueOf(location.longitude()));
             deliveryRepository.save(delivery);
         }
 
@@ -95,11 +88,9 @@ public class RouteController {
     @GetMapping
     public ResponseEntity<List<RouteResponseDto>> getAllRoutes() {
         var routes = routeRepository.findAll();
-
         var response = routes.stream()
                 .map(this::toDto)
                 .collect(Collectors.toList());
-
         return ResponseEntity.ok(response);
     }
 
@@ -117,7 +108,10 @@ public class RouteController {
         if (!routeRepository.existsById(id)) {
             return ResponseEntity.notFound().build();
         }
+
+        deliveryRepository.deleteByRouteId(id);
         routeRepository.deleteById(id);
+
         return ResponseEntity.noContent().build();
     }
 
@@ -126,17 +120,16 @@ public class RouteController {
                 ? route.getDeliveries().stream().map(this::toDeliveryDto).toList()
                 : List.of();
 
-        DriverProfile driverProfile = route.getDriverProfile();
-        UUID driverId = driverProfile != null ? driverProfile.getUserId() : null;
-        String driverName = driverProfile != null && driverProfile.getUser() != null ? driverProfile.getUser().getName() : "No Driver";
-
+        Driver driver = route.getDriver();
+        String driverName = driver != null ? driver.getDriverName() : null;
 
         return new RouteResponseDto(
                 route.getId(),
-                driverId,
-                driverName,
-                route.getCreatedAt(),
-                deliveryDtos
+                driver,                    // 2º parâmetro (Driver driverId)
+                route.getGenereatedBy(),   // 3º parâmetro (User generatedById - usando a grafia da classe Route)
+                driverName,                // 4º parâmetro (String driverName)
+                route.getCreatedAt(),      // 5º parâmetro (LocalDateTime createdAt)
+                deliveryDtos               // 6º parâmetro (List<DeliveryDto> deliveries)
         );
     }
 
@@ -145,11 +138,8 @@ public class RouteController {
                 delivery.getId(),
                 delivery.getOrder(),
                 delivery.getStatus(),
-                delivery.getRecipientName(),
-                delivery.getDropoffAddress(),
-                delivery.getPackageDetails(),
+                delivery.getAddress(),
                 delivery.getDeliveredAt()
         );
     }
-
 }
